--- a/gb/25/11/26/n14643893.md
+++ b/gb/25/11/26/n14643893.md
@@ -16,12 +16,12 @@
 <p class="p1">了解更多澳洲即时要闻及生活资讯，请点击<span class="s1">?<ahref="https://dajiyuan.com.au/"><span class="s2">dajiyuan.com.au</span></a></span></p>
 <p class="p1">（本文未经许可不得转载或建立镜像网站）</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/4/n9922246.md#1" target="_blank">林辉：文革冤案中周恩来的落井下石与冷酷</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/13/n4615407.md#1" target="_blank">怪病神奇痊愈的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/6/n11167928.md#1" target="_blank">林辉：寿则多辱 鲁迅之弟周作人凄惨中死去</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
