--- a/gb/25/11/27/n14644032.md
+++ b/gb/25/11/27/n14644032.md
@@ -19,12 +19,12 @@
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="https://dajiyuan.com.au/" data-cke-saved-href="https://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/28/n11285995.md#1" target="_blank">杨宁：从市委书记出丑说被膜拜的延安真相</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/27/n11281560.md#1" target="_blank">加拿大魁北克庆法轮大法日 市长议员祝贺</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/12/n10846318.md#1" target="_blank">共产暴政录：疯狂恐怖的“红八月”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/2/n10948448.md#1" target="_blank">新年感恩 中国百姓盼李洪志大师早日回国</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
