--- a/gb/25/12/4/n14648386.md
+++ b/gb/25/12/4/n14648386.md
@@ -23,18 +23,12 @@
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="https://dajiyuan.com.au/" data-cke-saved-href="https://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648296.md#1">留学生签证批准率大跌 澳大学或面临财政挑战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648294.md#1">贩售假冒NDIS认可商品 数百家企业遭罚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648290.md#1">房价飙 物价涨 近四成澳人忧无法退休</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648206.md#1">西澳法轮功学员参加圣诞游行 市长致谢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647868.md#1">澳军司令：中共舰队隐身菲律宾海 或驶向澳洲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647967.md#1">油车销量持续下滑 低排放车型全面赶超</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647943.md#1">谷歌因签反竞争协议被罚5500万澳元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647853.md#1">新州警方突击扫黑 逮捕六人 查扣逾千万资产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647870.md#1">澳洲GDP增长攀升至两年高点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647684.md#1">澳品牌红黑榜出炉 Temu排不信任榜单第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/23/n10420942.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/25/n7929122.md#1" target="_blank">九十五岁老人对法轮大法的感恩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
