--- a/gb/25/11/30/n14645955.md
+++ b/gb/25/11/30/n14645955.md
@@ -25,10 +25,10 @@
 <p>“看来这招（中共恐吓）适得其反了，现在我不仅知道了（《国有器官》），还很想看。”一则留言写道。</p>
 <p>另一位网民大骂中共后，直接问：“哪里可以订票？”</p>
 <p>还有网民表示：“这听起来是一个让这部电影在全国每一家电影院上映的绝佳理由。”</p>
-<p>针对悉尼教堂的恐吓事件并非孤立个案。《国有器官》此前在台湾院线上映期间，也遭遇了规模更为庞大、系统性更强的恐吓攻势。主办方与戏院陆续收到数以百计的匿名恐吓讯息。威胁信息内容极端，其中包括扬言暗杀台湾现任总统、威胁在戏院发动大规模枪击，在影城安置爆炸物等。台湾警方调查后认定大部分威胁均来自匿名境外IP地址，与中共支持的“网络代理”活动模式雷同。</p>
+<p>针对悉尼教堂的恐吓事件并非孤立个案。《国有器官》此前在台湾院线上映期间，也遭遇了规模更为庞大、系统性更强的恐吓攻势。主办方与戏院陆续收到逾百次的匿名恐吓讯息。威胁信息内容极端，其中包括扬言暗杀台湾现任总统、威胁在戏院发动大规模枪击，在影城安置爆炸物等。台湾警方调查后认定大部分威胁均来自匿名境外IP地址，与中共支持的“网络代理”活动模式雷同。</p>
 <h2>《国有器官》在线顺利公映 嘉宾：中共恶行终将受审</h2>
-<p>11月29日中午《国有器官》顺利在线直播。在问答环节中，与会嘉宾详细披露了取消教堂放映的幕后考量，并警告恶意行为者，独裁政权终将覆灭，中共恶行终将被追责。</p>
-<p>论坛嘉宾、澳洲法轮大法佛学会发言人约翰·戴乐（John Deller）表示，法轮功学员绝不会向中共的恐吓低头。他分析，中共通常习惯在幕后进行干扰，如果真的实施炸弹袭击或大规模枪击，将无异于直接坐实其罪行。</p>
+<p>11月29日中午《国有器官》顺利在线直播。在问答环节中，嘉宾详细披露了取消教堂放映的幕后考量，并警告恶意行为者，独裁政权终将覆灭，中共恶行终将被追责。</p>
+<p>嘉宾之一、澳洲法轮大法佛学会发言人约翰·戴乐（John Deller）表示，法轮功学员绝不会向中共的恐吓低头。他分析，中共通常习惯在幕后进行干扰，如果真的实施炸弹袭击或大规模枪击，将无异于直接坐实其罪行。</p>
 <p>然而，他强调，神父基于善意提供活动场地，因此涉及到教区的安全。</p>
 <p>“神父肩负着保护教区和信众的责任。我们必须尊重这一点。”他说。</p>
 <p>澳洲法轮大法佛学会会长赵博士（Dr Lucy Zhao）在一份声明中表示，活动取消是基于对社区安全的“极度谨慎”，并认为恐吓来自中共或其附属势力，目的是阻止民众了解真相、制造恐慌。</p>
@@ -37,18 +37,18 @@
 <p>协办此次公映活动的非盈利组织Macarthur Social Justice Network 11月28日在其社媒发表声明强调：“我们仍然坚守言论自由与人权原则，不会让恐吓行为削弱对这一议题（活摘器官）的讨论与关注。”</p>
 <p>事件发生后，澳洲法轮大法佛学会敦促政府重视跨国镇压威胁。</p>
 <p>“这些令人震惊的澳洲案例表明，澳洲情报安全局（ASIO）对外国势力企图在澳洲伤害批评者的公开警告已不是假设性的问题。”该学会在一封邮件中写道，并警告，跨国镇压不仅危害澳洲华人社区，而且正在改变澳洲的价值观和生活方式，直接威胁社区安全。</p>
-<p>面对中共试图通过炸弹威胁阻止真相传播的行径，论坛嘉宾Newton Xu警告说，或许正义今日尚未降临，但终将到来。</p>
+<p>面对中共试图通过炸弹威胁阻止真相传播的行径，嘉宾Newton Xu警告说，或许正义今日尚未降临，但终将到来。</p>
 <p>“独裁政权不会永久存在，中国终有一天会获得自由。那些罪行和暴行最终将被调查，相关责任人必将被追究。”他说。</p>
 <p>责任编辑：宗敏青</p>
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="https://dajiyuan.com.au/" data-cke-saved-href="https://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10235717.md#1" target="_blank">袁斌：重温“革命烈士”夏明翰的《就义诗》（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/8/n10285705.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(下)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/29/n11287543.md#1" target="_blank">纽约市七位市议员祝贺法轮大法日</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
